syntax = "proto3";

package api;

message BuildRegisterCodeRequest {
  string name = 1;
  string password = 2;
  int32 reg_type = 3;
  string target = 4;
}

message BuildRegisterCodeResponse {
  string reg_id = 1;
  int64 uid = 2;
}

message VerifyRegisterCodeRequest {
  string reg_id = 1;
  string code = 2;
}

message VerifyRegisterCodeResponse {
  bool ok = 1;
}

message LoginRequest {
  int32 login_type = 1;
  string password = 2;
  string target = 3;
  int32 device_type = 4;
  string device_id = 5;
}

message LoginResponse {
  string token = 1;
  uint64 expires_at = 2;
}

message ChangePasswordRequest {
  string session_token = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool ok = 1;
}

message ChangePhoneRequest {
  string session_token = 1;
  string new_phone = 2;
  optional string old_phone_code = 3;
  string new_phone_code = 4;
}

message ChangePhoneResponse {
  bool ok = 1;
  string phone = 2;
}

message ChangeEmailRequest {
  string session_token = 1;
  string new_email = 2;
  optional string old_email_code = 3;
  string new_email_code = 4;
}

message ChangeEmailResponse {
  bool ok = 1;
  string email = 2;
}

message UpdateProfileRequest {
  string session_token = 1;
  optional string avatar = 2;
  optional int32 gender = 3;
}

message UpdateProfileResponse {
  bool ok = 1;
}

service AuthService {
  rpc BuildRegisterCode(BuildRegisterCodeRequest) returns (BuildRegisterCodeResponse);
  rpc VerifyRegisterCode(VerifyRegisterCodeRequest) returns (VerifyRegisterCodeResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ChangePhone(ChangePhoneRequest) returns (ChangePhoneResponse);
  rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}
